--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -22,6 +22,8 @@
 # ======= 手动 ======= #
 # > 请在「设置」-「GeoLite2资料库」-「国家」-「URL」填写下面链接
 # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+# > 请在「设置」-「GeoLite2资料库」-「ASN」-「URL」填写下面链接
+# https://raw.githubusercontent.com/Loyalsoldier/geoip/release/GeoLite2-ASN.mmdb
 
 # ======= 通用 ======= #
 bypass-system = true
@@ -35,7 +37,7 @@ ipv6 = false
 
 # ======= 手动 ======= #
 全球加速 = select,自动选择,手动切换,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-手动切换 = select,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=*
+手动切换 = select,proxy
 苹果服务 = select,DIRECT,自动选择,香港节点,台湾节点,狮城节点,日本节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 哔哩哔哩 = select,DIRECT,自动选择,香港节点,台湾节点,狮城节点,日本节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 国际媒体 = select,自动选择,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
