--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,12 +1,8 @@
 [General]
 
 # ======= 说明 ======= #
-# > 墨鱼自用的小火箭配置文件
-# > 作者@ddgksf2013
-# > 𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
-# > 墨鱼手记
-# > 💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# > 2024/11/30 12:49UTC/GMT +8
+# > 小改自墨鱼@ddgksf2013自用的小火箭配置文件
+# > 2025/4/26 15:00UTC/GMT +8
 # > 请参考对应的注释或Tag
 # > 去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # > 贡献@ddgksf2013,@blackmatrix7, @Maasea
